packages/compiler/tests/compile/yaml/errors/incomplete_array.t/run.t
Tableau non fermé

  $ publicodes compile input.publicodes
  E001 le tableau n'est pas fermé [yaml error]
       ╒══  input.publicodes:1:10 ══
     1 │ a: [a, b,c
       │          ˘
     2 │ b:
       │ ˘˘
   Hint: il manque  `]` pour le fermer, ou `,` pour
         ajouter un élément
  
  [2]
